--- a/one/extend/riso_auth/contexts/templates/auth/group_list.html
+++ b/one/extend/riso_auth/contexts/templates/auth/group_list.html
@@ -19,15 +19,8 @@
           <!--begin::Add group-->
           <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#kt_modal_add_group">
-            <!--begin::Svg Icon | path: icons/duotune/arrows/arr075.svg-->
-            <span class="svg-icon svg-icon-2">
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect opacity="0.5" x="11.364" y="20.364" width="16" height="2" rx="1"
-                      transform="rotate(-90 11.364 20.364)"
-                      fill="currentColor"/>
-                <rect x="4.36396" y="11.364" width="16" height="2" rx="1" fill="currentColor"/>
-              </svg>
-            </span>
+            <!--begin::Svg Icon | path: icons/duotune/arrows/arr075.svg svg-icon svg-icon-2-->
+            {% get_svg_icon 'duotune/arrows/arr075.svg' 'svg-icon svg-icon-2' %}
             <!--end::Svg Icon-->
             {% translate 'Add Group' %}
           </button>
@@ -102,14 +95,8 @@
           <!--end::Modal title-->
           <!--begin::Close-->
           <div class="btn btn-sm btn-icon btn-active-color-primary" data-bs-dismiss="modal">
-            <!--begin::Svg Icon | path: icons/duotune/arrows/arr061.svg-->
-            <span class="svg-icon svg-icon-1">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                <rect opacity="0.5" x="6" y="17.3137" width="16" height="2" rx="1" transform="rotate(-45 6 17.3137)"
-                      fill="black"/>
-                <rect x="7.41422" y="6" width="16" height="2" rx="1" transform="rotate(45 7.41422 6)" fill="black"/>
-              </svg>
-            </span>
+            <!--begin::Svg Icon | path: icons/duotune/arrows/arr061.svg svg-icon svg-icon-1-->
+            {% get_svg_icon 'duotune/arrows/arr061.svg' 'svg-icon svg-icon-1' %}
             <!--end::Svg Icon-->
           </div>
           <!--end::Close-->
@@ -183,14 +170,8 @@
           <!--end::Modal title-->
           <!--begin::Close-->
           <div class="btn btn-sm btn-icon btn-active-color-primary" data-bs-dismiss="modal">
-            <!--begin::Svg Icon | path: icons/duotune/arrows/arr061.svg-->
-            <span class="svg-icon svg-icon-1">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                <rect opacity="0.5" x="6" y="17.3137" width="16" height="2" rx="1" transform="rotate(-45 6 17.3137)"
-                      fill="black"/>
-                <rect x="7.41422" y="6" width="16" height="2" rx="1" transform="rotate(45 7.41422 6)" fill="black"/>
-              </svg>
-            </span>
+            <!--begin::Svg Icon | path: icons/duotune/arrows/arr061.svg svg-icon svg-icon-1-->
+            {% get_svg_icon 'duotune/arrows/arr061.svg' 'svg-icon svg-icon-1' %}
             <!--end::Svg Icon-->
           </div>
           <!--end::Close-->
