--- a/one/users/templates/users/user_detail.html
+++ b/one/users/templates/users/user_detail.html
@@ -109,17 +109,8 @@
       <!--begin::Notice-->
       <div class="notice d-flex bg-light-warning rounded border-warning border border-dashed p-6">
         <!--begin::Icon-->
-        <!--begin::Svg Icon | path: icons/duotune/general/gen044.svg-->
-        <span class="svg-icon svg-icon-2tx svg-icon-warning me-4">
-													<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                               xmlns="http://www.w3.org/2000/svg">
-														<rect opacity="0.3" x="2" y="2" width="20" height="20" rx="10" fill="currentColor"/>
-														<rect x="11" y="14" width="7" height="2" rx="1" transform="rotate(-90 11 14)"
-                                  fill="currentColor"/>
-														<rect x="11" y="17" width="2" height="2" rx="1" transform="rotate(-90 11 17)"
-                                  fill="currentColor"/>
-													</svg>
-												</span>
+        <!--begin::Svg Icon | path: icons/duotune/general/gen044.svg svg-icon svg-icon-2tx svg-icon-warning me-4-->
+        {% get_svg_icon 'duotune/general/gen044.svg' 'svg-icon svg-icon-2tx svg-icon-warning me-4' %}
         <!--end::Svg Icon-->
         <!--end::Icon-->
         <!--begin::Wrapper-->
@@ -159,16 +150,8 @@
             <!--begin::Menu-->
             <button class="btn btn-icon btn-color-gray-400 btn-active-color-primary justify-content-end"
                     data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end" data-kt-menu-overflow="true">
-              <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg-->
-              <span class="svg-icon svg-icon-1 svg-icon-gray-300 me-n1">
-																<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-																	<rect opacity="0.3" x="2" y="2" width="20" height="20" rx="4" fill="currentColor"/>
-																	<rect x="11" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																	<rect x="15" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																	<rect x="7" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																</svg>
-															</span>
+              <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg svg-icon svg-icon-1 svg-icon-gray-300 me-n1-->
+              {% get_svg_icon 'duotune/general/gen023.svg' 'svg-icon svg-icon-1 svg-icon-gray-300 me-n1' %}
               <!--end::Svg Icon-->
             </button>
             <!--begin::Menu 2-->
@@ -268,8 +251,8 @@
             <!--end::Title-->
             <!--begin::Illustration-->
             <div class="py-10 text-center">
-              <img src="assets/media/svg/illustrations/easy/1.svg" class="theme-light-show w-200px" alt=""/>
-              <img src="assets/media/svg/illustrations/easy/1-dark.svg" class="theme-dark-show w-200px" alt=""/>
+              <img src="{% static 'media/svg/illustrations/easy/1.svg' %}" class="theme-light-show w-200px" alt=""/>
+              <img src="{% static 'media/svg/illustrations/easy/1-dark.svg' %}" class="theme-dark-show w-200px" alt=""/>
             </div>
             <!--end::Illustration-->
           </div>
@@ -325,7 +308,7 @@
                 <!--begin::Wrapper-->
                 <div class="me-3">
                   <!--begin::Icon-->
-                  <img src="assets/media/stock/ecommerce/210.gif" class="w-50px ms-n1 me-1" alt=""/>
+                  <img src="{% static 'media/stock/ecommerce/210.gif' %}" class="w-50px ms-n1 me-1" alt=""/>
                   <!--end::Icon-->
                   <!--begin::Title-->
                   <a href="../../demo1/dist/apps/ecommerce/catalog/edit-product.html"
@@ -338,17 +321,8 @@
                   <!--begin::Menu-->
                   <button class="btn btn-icon btn-color-gray-400 btn-active-color-primary justify-content-end"
                           data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end" data-kt-menu-overflow="true">
-                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg-->
-                    <span class="svg-icon svg-icon-1">
-																			<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                           xmlns="http://www.w3.org/2000/svg">
-																				<rect opacity="0.3" x="2" y="2" width="20" height="20" rx="4"
-                                              fill="currentColor"/>
-																				<rect x="11" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="15" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="7" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																			</svg>
-																		</span>
+                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg svg-icon svg-icon-1-->
+                    {% get_svg_icon 'duotune/general/gen023.svg' 'svg-icon svg-icon-1' %}
                     <!--end::Svg Icon-->
                   </button>
                   <!--begin::Menu 2-->
@@ -445,7 +419,7 @@
                 <!--begin::Wrapper-->
                 <div class="me-3">
                   <!--begin::Icon-->
-                  <img src="assets/media/stock/ecommerce/209.gif" class="w-50px ms-n1 me-1" alt=""/>
+                  <img src="{% static 'media/stock/ecommerce/209.gif' %}" class="w-50px ms-n1 me-1" alt=""/>
                   <!--end::Icon-->
                   <!--begin::Title-->
                   <a href="../../demo1/dist/apps/ecommerce/catalog/edit-product.html"
@@ -458,17 +432,8 @@
                   <!--begin::Menu-->
                   <button class="btn btn-icon btn-color-gray-400 btn-active-color-primary justify-content-end"
                           data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end" data-kt-menu-overflow="true">
-                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg-->
-                    <span class="svg-icon svg-icon-1">
-																			<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                           xmlns="http://www.w3.org/2000/svg">
-																				<rect opacity="0.3" x="2" y="2" width="20" height="20" rx="4"
-                                              fill="currentColor"/>
-																				<rect x="11" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="15" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="7" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																			</svg>
-																		</span>
+                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg svg-icon svg-icon-1-->
+                    {% get_svg_icon 'duotune/general/gen023.svg' 'svg-icon svg-icon-1' %}
                     <!--end::Svg Icon-->
                   </button>
                   <!--begin::Menu 2-->
@@ -565,7 +530,7 @@
                 <!--begin::Wrapper-->
                 <div class="me-3">
                   <!--begin::Icon-->
-                  <img src="assets/media/stock/ecommerce/214.gif" class="w-50px ms-n1 me-1" alt=""/>
+                  <img src="{% static 'media/stock/ecommerce/214.gif' %}" class="w-50px ms-n1 me-1" alt=""/>
                   <!--end::Icon-->
                   <!--begin::Title-->
                   <a href="../../demo1/dist/apps/ecommerce/catalog/edit-product.html"
@@ -578,17 +543,8 @@
                   <!--begin::Menu-->
                   <button class="btn btn-icon btn-color-gray-400 btn-active-color-primary justify-content-end"
                           data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end" data-kt-menu-overflow="true">
-                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg-->
-                    <span class="svg-icon svg-icon-1">
-																			<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                           xmlns="http://www.w3.org/2000/svg">
-																				<rect opacity="0.3" x="2" y="2" width="20" height="20" rx="4"
-                                              fill="currentColor"/>
-																				<rect x="11" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="15" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="7" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																			</svg>
-																		</span>
+                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg svg-icon svg-icon-1-->
+                    {% get_svg_icon 'duotune/general/gen023.svg' 'svg-icon svg-icon-1' %}
                     <!--end::Svg Icon-->
                   </button>
                   <!--begin::Menu 2-->
@@ -685,7 +641,7 @@
                 <!--begin::Wrapper-->
                 <div class="me-3">
                   <!--begin::Icon-->
-                  <img src="assets/media/stock/ecommerce/211.gif" class="w-50px ms-n1 me-1" alt=""/>
+                  <img src="{% static 'media/stock/ecommerce/211.gif' %}" class="w-50px ms-n1 me-1" alt=""/>
                   <!--end::Icon-->
                   <!--begin::Title-->
                   <a href="../../demo1/dist/apps/ecommerce/catalog/edit-product.html"
@@ -698,17 +654,8 @@
                   <!--begin::Menu-->
                   <button class="btn btn-icon btn-color-gray-400 btn-active-color-primary justify-content-end"
                           data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end" data-kt-menu-overflow="true">
-                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg-->
-                    <span class="svg-icon svg-icon-1">
-																			<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                           xmlns="http://www.w3.org/2000/svg">
-																				<rect opacity="0.3" x="2" y="2" width="20" height="20" rx="4"
-                                              fill="currentColor"/>
-																				<rect x="11" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="15" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="7" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																			</svg>
-																		</span>
+                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg svg-icon svg-icon-1-->
+                    {% get_svg_icon 'duotune/general/gen023.svg' 'svg-icon svg-icon-1' %}
                     <!--end::Svg Icon-->
                   </button>
                   <!--begin::Menu 2-->
@@ -805,7 +752,7 @@
                 <!--begin::Wrapper-->
                 <div class="me-3">
                   <!--begin::Icon-->
-                  <img src="assets/media/stock/ecommerce/215.gif" class="w-50px ms-n1 me-1" alt=""/>
+                  <img src="{% static 'media/stock/ecommerce/215.gif' %}" class="w-50px ms-n1 me-1" alt=""/>
                   <!--end::Icon-->
                   <!--begin::Title-->
                   <a href="../../demo1/dist/apps/ecommerce/catalog/edit-product.html"
@@ -818,17 +765,8 @@
                   <!--begin::Menu-->
                   <button class="btn btn-icon btn-color-gray-400 btn-active-color-primary justify-content-end"
                           data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end" data-kt-menu-overflow="true">
-                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg-->
-                    <span class="svg-icon svg-icon-1">
-																			<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                           xmlns="http://www.w3.org/2000/svg">
-																				<rect opacity="0.3" x="2" y="2" width="20" height="20" rx="4"
-                                              fill="currentColor"/>
-																				<rect x="11" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="15" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="7" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																			</svg>
-																		</span>
+                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg svg-icon svg-icon-1-->
+                    {% get_svg_icon 'duotune/general/gen023.svg' 'svg-icon svg-icon-1' %}
                     <!--end::Svg Icon-->
                   </button>
                   <!--begin::Menu 2-->
@@ -925,7 +863,7 @@
                 <!--begin::Wrapper-->
                 <div class="me-3">
                   <!--begin::Icon-->
-                  <img src="assets/media/stock/ecommerce/192.gif" class="w-50px ms-n1 me-1" alt=""/>
+                  <img src="{% static 'media/stock/ecommerce/192.gif' %}" class="w-50px ms-n1 me-1" alt=""/>
                   <!--end::Icon-->
                   <!--begin::Title-->
                   <a href="../../demo1/dist/apps/ecommerce/catalog/edit-product.html"
@@ -938,17 +876,8 @@
                   <!--begin::Menu-->
                   <button class="btn btn-icon btn-color-gray-400 btn-active-color-primary justify-content-end"
                           data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end" data-kt-menu-overflow="true">
-                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg-->
-                    <span class="svg-icon svg-icon-1">
-																			<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                           xmlns="http://www.w3.org/2000/svg">
-																				<rect opacity="0.3" x="2" y="2" width="20" height="20" rx="4"
-                                              fill="currentColor"/>
-																				<rect x="11" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="15" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																				<rect x="7" y="11" width="2.6" height="2.6" rx="1.3" fill="currentColor"/>
-																			</svg>
-																		</span>
+                    <!--begin::Svg Icon | path: icons/duotune/general/gen023.svg svg-icon svg-icon-1-->
+                    {% get_svg_icon 'duotune/general/gen023.svg' 'svg-icon svg-icon-1' %}
                     <!--end::Svg Icon-->
                   </button>
                   <!--begin::Menu 2-->
