--- a/one/templates/app/_list.html
+++ b/one/templates/app/_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static i18n %}
 
-{% block title %}{% translate 'User managements' %}: {% translate 'Group list' %}{% endblock %}
+{% block title %}{% trans 'User managements' %}: {% trans 'Group list' %}{% endblock %}
 
 {% block content %}
   <!--begin::Card-->
