update defer script init image_input

--- a/one/components/templates/widgets/image_input.html
+++ b/one/components/templates/widgets/image_input.html
@@ -47,3 +47,7 @@
      <!--end::Remove button-->
  </div>
  <!--end::Image input-->
+
+<script defer type="text/javascript">
+  KTImageInput.createInstances();
+</script>
