--- a/one/users/templates/users/user_form.html
+++ b/one/users/templates/users/user_form.html
@@ -1,14 +1,5 @@
 {% extends "users/base.html" %}
 
 {% block inner %}
-<form class="form-horizontal" method="post" action="{% url 'users:update' %}">
-    {% csrf_token %}
-    {{ form }}
-    <div class="control-group">
-      <div class="controls">
-        <button type="submit" class="btn btn-primary">Update</button>
-      </div>
-    </div>
-  </form>
-
+  {% include 'app/form.html' %}
 {% endblock inner %}
