--- a/one/templates/layout/default.html
+++ b/one/templates/layout/default.html
@@ -40,6 +40,6 @@
 
   {#  {% include 'layout/partials/_modals.html' %}#}
 
-  {#  {% include 'layout/partials/_scrolltop.html' %}#}
+    {% include 'partials/scrolltop.html' %}
 
 {% endblock layout %}
