--- a/one/templates/layout/master.html
+++ b/one/templates/layout/master.html
@@ -74,6 +74,14 @@
     <input type="submit" value="Go">
   </form>
 
+  <div id="trans_label_div">
+    <input id="id_btn_cancel_label" value="{% trans 'Cancel' %}">
+    <input id="id_btn_submit_label" value="{% trans 'Submit' %}">
+    <input id="id_btn_close_label" value="{% trans 'Close' %}">
+    <input id="id_btn_save_label" value="{% trans 'Save' %}">
+    <input id="id_btn_save_changes_label" value="{% trans 'Save Changes' %}">
+  </div>
+
   {% block hidden-div %}
   {% endblock hidden-div %}
 
