--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -1360,8 +1360,7 @@
     <!--begin::View component-->
     <div
       id="kt_drawer_example_basic"
-
-      class="bg-white"
+      class="bg-white position-static d-md-none"
       data-kt-drawer="true"
       data-kt-drawer-direction="end"
       data-kt-drawer-activate="true"
@@ -1369,14 +1368,36 @@
       data-kt-drawer-close="#kt_drawer_example_basic_close"
       data-kt-drawer-width="225px"
     >
-      ...
+      <!--begin::Sticky aside-->
+      <div class="card card-flush mb-0" data-kt-sticky="true"
+           data-kt-sticky-animation="false"
+           data-kt-sticky-left="auto"
+           data-kt-sticky-name="inbox-aside-sticky"
+           data-kt-sticky-offset="{default: false, xl: '100px'}"
+           data-kt-sticky-top="100px" data-kt-sticky-width="{lg: '275px'}"
+           data-kt-sticky-zindex="95">
+        <!--begin::Aside content-->
+        <div class="card-body">
+          tttt
+        </div>
+        <!--end::Aside content-->
+      </div>
+      <!--end::Sticky aside-->
     </div>
     <!--end::View component-->
   </div>
 
-
-
   <!--end::List Content -->
+
+  <style>
+    .drawer {
+      display: none !important;
+    }
+
+    .drawer.drawer-on {
+      display: flex !important;
+    }
+  </style>
 {% endblock content %}
 
 {% block inline_javascript %}
