update drawer toggle

--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -1369,7 +1369,7 @@
       data-kt-drawer-width="225px"
     >
       <!--begin::Sticky aside-->
-      <div class="card card-flush mb-0" data-kt-sticky="true"
+      <div class="card card-flush mb-0 w-100" data-kt-sticky="true"
            data-kt-sticky-animation="false"
            data-kt-sticky-left="auto"
            data-kt-sticky-name="inbox-aside-sticky"
@@ -1377,7 +1377,7 @@
            data-kt-sticky-top="100px" data-kt-sticky-width="{lg: '275px'}"
            data-kt-sticky-zindex="95">
         <!--begin::Aside content-->
-        <div class="card-body">
+        <div class="card-body ">
           tttt
         </div>
         <!--end::Aside content-->
