--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -45,19 +45,7 @@
             <!--begin::Search-->
             <div class="d-flex align-items-center position-relative">
               <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
-              <span class="svg-icon svg-icon-2 position-absolute ms-4">
-                          <svg fill="none" height="24" viewBox="0 0 24 24"
-                               width="24" xmlns="http://www.w3.org/2000/svg">
-                            <rect fill="currentColor" height="2" opacity="0.5"
-                                  rx="1" transform="rotate(45 17.0365 15.1223)"
-                                  width="8.15546"
-                                  x="17.0365"
-                                  y="15.1223"/>
-                            <path
-                              d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z"
-                              fill="currentColor"/>
-                          </svg>
-                        </span>
+              {% get_svg_icon 'duotune/general/gen021.svg' 'svg-icon svg-icon-2 position-absolute ms-4' %}
               <!--end::Svg Icon-->
               <input
                 class="form-control form-control-sm form-control-solid mw-100 min-w-125px min-w-lg-150px min-w-xxl-200px ps-12"
