--- a/one/templates/layout/default.html
+++ b/one/templates/layout/default.html
@@ -5,7 +5,7 @@
   <div class="d-flex flex-column flex-root" id="kt_app_root">
     <!--begin::Page-->
     <div class="app-page flex-column flex-column-fluid" id="kt_app_page">
-      {#      {% include 'layout/partials/sidebar-layout/_header.html' %}#}
+      {% include 'layout/partials/sidebar-layout/_header.html' %}
       <!--begin::Wrapper-->
       <div class="app-wrapper flex-column flex-row-fluid" id="kt_app_wrapper">
         {#        {% include 'layout/partials/sidebar-layout/_sidebar.html' %}#}
