--- a/one/templates/layout/partials/header-layout/header/_navbar.html
+++ b/one/templates/layout/partials/header-layout/header/_navbar.html
@@ -50,7 +50,7 @@
   <!--end::Quick links-->
   <!--begin::Theme mode-->
   <div class="app-navbar-item ms-1 ms-lg-3">
-{#    {% include 'partials/theme-mode/_main.html' with toggle_btn_class='btn btn-icon btn-custom btn-icon-muted btn-active-light btn-active-color-primary w-35px h-35px w-md-40px h-md-40px'  toggle_btn_icon_class='svg-icon svg-icon-2' %}#}
+    {% include 'partials/theme-mode/_main.html' with toggle_btn_class='btn btn-icon btn-custom btn-icon-muted btn-active-light btn-active-color-primary w-35px h-35px w-md-40px h-md-40px'  toggle_btn_icon_class='svg-icon svg-icon-2' %}
   </div>
   <!--end::Theme mode-->
   <!--begin::User menu-->
