--- a/one/templates/partials/theme-mode/_main.html
+++ b/one/templates/partials/theme-mode/_main.html
@@ -7,4 +7,4 @@
   {% get_svg_icon 'duotune/general/gen061.svg' 'svg-icon theme-dark-show svg-icon-2' %}
 </a>
 <!--begin::Menu toggle-->
-{#{% include 'partials/theme-mode/__menu.html' %}#}
+{% include 'partials/theme-mode/__menu.html' %}
