--- a/one/templates/layout/partials/sidebar-layout/_header.html
+++ b/one/templates/layout/partials/sidebar-layout/_header.html
@@ -4,8 +4,8 @@
   <div class="app-container container-fluid d-flex align-items-stretch justify-content-between">
     <!--begin::sidebar mobile toggle-->
     <div class="d-flex align-items-center d-lg-none ms-n2 me-2" title="Show sidebar menu">
-      <div class="btn btn-icon btn-active-color-primary w-35px h-35px" id="kt_app_sidebar_mobile_toggle">{%
-        get_svg_icon 'duotune/abstract/abs015.svg' 'svg-icon svg-icon-1' %}
+      <div class="btn btn-icon btn-active-color-primary w-35px h-35px" id="kt_app_sidebar_mobile_toggle">
+        {% get_svg_icon 'duotune/abstract/abs015.svg' 'svg-icon svg-icon-1' %}
       </div>
     </div>
     <!--end::sidebar mobile toggle-->
@@ -19,9 +19,9 @@
     <!--begin::Header wrapper-->
     <div class="d-flex align-items-stretch justify-content-between flex-lg-grow-1" id="kt_app_header_wrapper">
 
-{#      {% include './header/_menu/_menu.html' %}#}
+{#      {% include 'layout/partials/header-layout/header/_menu/_menu.html' %}#}
 
-{#      {% include './header/_navbar.html' %}#}
+      {% include 'layout/partials/header-layout/header/_navbar.html' %}
 
     </div>
     <!--end::Header wrapper-->
