--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -191,7 +191,7 @@
     <!--begin::View component-->
     <div
       id="kt_drawer_example_basic"
-      class="bg-white position-static d-md-none"
+      class="position-static d-md-none"
       data-kt-drawer="true"
       data-kt-drawer-direction="end"
       data-kt-drawer-activate="true"
